dist_man1_MANS=

if BUILD_LIGHTCOIND
  dist_man1_MANS+=lightcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=lightcoin-qt.1
endif

if BUILD_LIGHTCOIN_CLI
  dist_man1_MANS+=lightcoin-cli.1
endif

if BUILD_LIGHTCOIN_TX
  dist_man1_MANS+=lightcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_LIGHTCOIN_WALLET
  dist_man1_MANS+=lightcoin-wallet.1
endif
endif
